grammar/ScriptParser.py
# Generated from ScriptParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ScriptParser ( Parser ):

    grammarFileName = "ScriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "','", "'('", "<INVALID>", "'['", 
                     "<INVALID>", "'{'", "'}'", "'*'", "'**'", "'%'", "'/'", 
                     "'+'", "'-'", "'++'", "'--'", "'&&'", "'||'", "'!'", 
                     "':'", "'::'", "';'", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'->'", "'=>'", "'..'", "'#'", "'@'", 
                     "'?'", "'?:'", "'<'", "'>'", "'<='", "'>='", "'!='", 
                     "'=='", "'''", "'import'", "'struct'", "'fun'", "'script'", 
                     "'callback'", "'archetype'", "'levelvar'", "'const'", 
                     "'var'", "'val'", "'pit'", "'if'", "'else'", "'while'", 
                     "'get'", "'set'", "'as'", "'public'", "'private'", 
                     "'shared'", "'static'", "'operator'", "'data'" ]

    symbolicNames = [ "<INVALID>", "DelimitedComment", "LineComment", "WS", 
                      "NL", "DOT", "COMMA", "LPAREN", "RPAREN", "LSQUARE", 
                      "RSQUARE", "LCURL", "RCURL", "MULT", "POW", "MOD", 
                      "DIV", "ADD", "SUB", "INCR", "DECR", "CONJ", "DISJ", 
                      "EXCL", "COLON", "COLONCOLON", "SEMICOLON", "ASSIGNMENT", 
                      "ADD_ASSIGNMENT", "SUB_ASSIGNMENT", "MULT_ASSIGNMENT", 
                      "DIV_ASSIGNMENT", "MOD_ASSIGNMENT", "ARROW", "DOUBLE_ARROW", 
                      "RANGE", "HASH", "AT", "QUEST", "ELVIS", "LANGLE", 
                      "RANGLE", "LE", "GE", "EXCL_EQ", "EQEQ", "SINGLE_QUOTE", 
                      "IMPORT", "STRUCT", "FUN", "SCRIPT", "CALLBACK", "ARCHETYPE", 
                      "LEVELVAR", "CONST", "VAR", "VAL", "PIT", "IF", "ELSE", 
                      "WHILE", "GETTER", "SETTER", "AS", "PUBLIC", "PRIVATE", 
                      "SHARED", "STATIC", "OPERATOR", "DATA", "FloatLiteral", 
                      "IntegerLiteral", "BooleanLiteral", "Identifier", 
                      "UNICODE_CLASS_LL", "UNICODE_CLASS_LM", "UNICODE_CLASS_LO", 
                      "UNICODE_CLASS_LT", "UNICODE_CLASS_LU", "UNICODE_CLASS_ND", 
                      "UNICODE_CLASS_NL", "Inside_Comment", "Inside_WS", 
                      "Inside_NL" ]

    RULE_scriptFile = 0
    RULE_importList = 1
    RULE_importHeader = 2
    RULE_topLevelObject = 3
    RULE_levelvarDeclaration = 4
    RULE_archetypeDeclaration = 5
    RULE_archetypeName = 6
    RULE_archetypeDefaults = 7
    RULE_archetypeDefault = 8
    RULE_structDeclaration = 9
    RULE_structBody = 10
    RULE_structMemberDeclaration = 11
    RULE_structFields = 12
    RULE_structField = 13
    RULE_scriptDeclaration = 14
    RULE_scriptParameters = 15
    RULE_scriptParameter = 16
    RULE_scriptBody = 17
    RULE_scriptMemberDeclaration = 18
    RULE_propertyDeclaration = 19
    RULE_callbackDeclaration = 20
    RULE_callbackOrder = 21
    RULE_functionDeclaration = 22
    RULE_functionParameters = 23
    RULE_functionParameter = 24
    RULE_functionBody = 25
    RULE_block = 26
    RULE_statements = 27
    RULE_statement = 28
    RULE_declaration = 29
    RULE_getter = 30
    RULE_setter = 31
    RULE_constantDeclaration = 32
    RULE_parameter = 33
    RULE_userType = 34
    RULE_expression = 35
    RULE_disjunction = 36
    RULE_conjunction = 37
    RULE_equalityComparison = 38
    RULE_comparison = 39
    RULE_infixFunctionCall = 40
    RULE_additiveExpression = 41
    RULE_multiplicativeExpression = 42
    RULE_exponentiationExpression = 43
    RULE_prefixUnaryExpression = 44
    RULE_postfixUnaryExpression = 45
    RULE_atomicExpression = 46
    RULE_parenthesizedExpression = 47
    RULE_callSuffix = 48
    RULE_valueArguments = 49
    RULE_valueArgument = 50
    RULE_conditionalExpression = 51
    RULE_ifExpression = 52
    RULE_controlStructureBody = 53
    RULE_loopExpression = 54
    RULE_whileExpression = 55
    RULE_modifierList = 56
    RULE_modifier = 57
    RULE_identifier = 58
    RULE_simpleIdentifier = 59
    RULE_literalConstant = 60
    RULE_additiveOperator = 61
    RULE_multiplicativeOperation = 62
    RULE_prefixUnaryOperation = 63
    RULE_postfixUnaryOperation = 64
    RULE_memberAccessOperator = 65
    RULE_assignmentOperator = 66
    RULE_equalityOperation = 67
    RULE_comparisonOperator = 68
    RULE_semi = 69
    RULE_anysemi = 70

    ruleNames =  [ "scriptFile", "importList", "importHeader", "topLevelObject", 
                   "levelvarDeclaration", "archetypeDeclaration", "archetypeName", 
                   "archetypeDefaults", "archetypeDefault", "structDeclaration", 
                   "structBody", "structMemberDeclaration", "structFields", 
                   "structField", "scriptDeclaration", "scriptParameters", 
                   "scriptParameter", "scriptBody", "scriptMemberDeclaration", 
                   "propertyDeclaration", "callbackDeclaration", "callbackOrder", 
                   "functionDeclaration", "functionParameters", "functionParameter", 
                   "functionBody", "block", "statements", "statement", "declaration", 
                   "getter", "setter", "constantDeclaration", "parameter", 
                   "userType", "expression", "disjunction", "conjunction", 
                   "equalityComparison", "comparison", "infixFunctionCall", 
                   "additiveExpression", "multiplicativeExpression", "exponentiationExpression", 
                   "prefixUnaryExpression", "postfixUnaryExpression", "atomicExpression", 
                   "parenthesizedExpression", "callSuffix", "valueArguments", 
                   "valueArgument", "conditionalExpression", "ifExpression", 
                   "controlStructureBody", "loopExpression", "whileExpression", 
                   "modifierList", "modifier", "identifier", "simpleIdentifier", 
                   "literalConstant", "additiveOperator", "multiplicativeOperation", 
                   "prefixUnaryOperation", "postfixUnaryOperation", "memberAccessOperator", 
                   "assignmentOperator", "equalityOperation", "comparisonOperator", 
                   "semi", "anysemi" ]

    EOF = Token.EOF
    DelimitedComment=1
    LineComment=2
    WS=3
    NL=4
    DOT=5
    COMMA=6
    LPAREN=7
    RPAREN=8
    LSQUARE=9
    RSQUARE=10
    LCURL=11
    RCURL=12
    MULT=13
    POW=14
    MOD=15
    DIV=16
    ADD=17
    SUB=18
    INCR=19
    DECR=20
    CONJ=21
    DISJ=22
    EXCL=23
    COLON=24
    COLONCOLON=25
    SEMICOLON=26
    ASSIGNMENT=27
    ADD_ASSIGNMENT=28
    SUB_ASSIGNMENT=29
    MULT_ASSIGNMENT=30
    DIV_ASSIGNMENT=31
    MOD_ASSIGNMENT=32
    ARROW=33
    DOUBLE_ARROW=34
    RANGE=35
    HASH=36
    AT=37
    QUEST=38
    ELVIS=39
    LANGLE=40
    RANGLE=41
    LE=42
    GE=43
    EXCL_EQ=44
    EQEQ=45
    SINGLE_QUOTE=46
    IMPORT=47
    STRUCT=48
    FUN=49
    SCRIPT=50
    CALLBACK=51
    ARCHETYPE=52
    LEVELVAR=53
    CONST=54
    VAR=55
    VAL=56
    PIT=57
    IF=58
    ELSE=59
    WHILE=60
    GETTER=61
    SETTER=62
    AS=63
    PUBLIC=64
    PRIVATE=65
    SHARED=66
    STATIC=67
    OPERATOR=68
    DATA=69
    FloatLiteral=70
    IntegerLiteral=71
    BooleanLiteral=72
    Identifier=73
    UNICODE_CLASS_LL=74
    UNICODE_CLASS_LM=75
    UNICODE_CLASS_LO=76
    UNICODE_CLASS_LT=77
    UNICODE_CLASS_LU=78
    UNICODE_CLASS_ND=79
    UNICODE_CLASS_NL=80
    Inside_Comment=81
    Inside_WS=82
    Inside_NL=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importList(self):
            return self.getTypedRuleContext(ScriptParser.ImportListContext,0)


        def EOF(self):
            return self.getToken(ScriptParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ScriptParser.NL)
            else:
                return self.getToken(ScriptParser.NL, i)

        def anysemi(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScriptParser.AnysemiContext)
            else:
                return self.getTypedRuleContext(ScriptParser.AnysemiContext,i)


        def topLevelObject(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScriptParser.TopLevelObjectContext)
            else:
                return self.getTypedRuleContext(ScriptParser.TopLevelObjectContext,i)


        def getRuleIndex(self):
            return ScriptParser.RULE_scriptFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScriptFile" ):
                listener.enterScriptFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScriptFile" ):
                listener.exitScriptFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScriptFile" ):
                return visitor.visitScriptFile(self)
            else:
                return visitor.visitChildren(self)




    def scriptFile(self):

        localctx = ScriptParser.ScriptFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_scriptFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 142
                    self.match(ScriptParser.NL) 
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 148
            self.importList()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ScriptParser.NL or _la==ScriptParser.SEMICOLON:
                self.state = 149
                self.anysemi()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 48)) & ~0x3f) == 0 and ((1 << (_la - 48)) & ((1 << (ScriptParser.STRUCT - 48)) | (1 << (ScriptParser.FUN - 48)) | (1 << (ScriptParser.SCRIPT - 48)) | (1 << (ScriptParser.ARCHETYPE - 48)) | (1 << (ScriptParser.LEVELVAR - 48)) | (1 << (ScriptParser.CONST - 48)) | (1 << (ScriptParser.VAR - 48)) | (1 << (ScriptParser.VAL - 48)) | (1 << (ScriptParser.PIT - 48)) | (1 << (ScriptParser.PUBLIC - 48)) | (1 << (ScriptParser.PRIVATE - 48)) | (1 << (ScriptParser.SHARED - 48)) | (1 << (ScriptParser.STATIC - 48)) | (1 << (ScriptParser.OPERATOR - 48)) | (1 << (ScriptParser.DATA - 48)))) != 0):
                self.state = 155
                self.topLevelObject()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ScriptParser.NL or _la==ScriptParser.SEMICOLON:
                    self.state = 157 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 156
                            self.anysemi()

                        else:
                            raise NoViableAltException(self)
                        self.state = 159 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                    self.state = 162
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if ((((_la - 48)) & ~0x3f) == 0 and ((1 << (_la - 48)) & ((1 << (ScriptParser.STRUCT - 48)) | (1 << (ScriptParser.FUN - 48)) | (1 << (ScriptParser.SCRIPT - 48)) | (1 << (ScriptParser.ARCHETYPE - 48)) | (1 << (ScriptParser.LEVELVAR - 48)) | (1 << (ScriptParser.CONST - 48)) | (1 << (ScriptParser.VAR - 48)) | (1 << (ScriptParser.VAL - 48)) | (1 << (ScriptParser.PIT - 48)) | (1 << (ScriptParser.PUBLIC - 48)) | (1 << (ScriptParser.PRIVATE - 48)) | (1 << (ScriptParser.SHARED - 48)) | (1 << (ScriptParser.STATIC - 48)) | (1 << (ScriptParser.OPERATOR - 48)) | (1 << (ScriptParser.DATA - 48)))) != 0):
                        self.state = 161
                        self.topLevelObject()


                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 171
            self.match(ScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importHeader(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScriptParser.ImportHeaderContext)
            else:
                return self.getTypedRuleContext(ScriptParser.ImportHeaderContext,i)


        def getRuleIndex(self):
            return ScriptParser.RULE_importList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportList" ):
                listener.enterImportList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportList" ):
                listener.exitImportList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportList" ):
                return visitor.visitImportList(self)
            else:
                return visitor.visitChildren(self)




    def importList(self):

        localctx = ScriptParser.ImportListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ScriptParser.IMPORT:
                self.state = 173
                self.importHeader()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportHeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(ScriptParser.IMPORT, 0)

        def simpleIdentifier(self):
            return self.getTypedRuleContext(ScriptParser.SimpleIdentifierContext,0)


        def semi(self):
            return self.getTypedRuleContext(ScriptParser.SemiContext,0)


        def getRuleIndex(self):
            return ScriptParser.RULE_importHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportHeader" ):
                listener.enterImportHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportHeader" ):
                listener.exitImportHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportHeader" ):
                return visitor.visitImportHeader(self)
            else:
                return visitor.visitChildren(self)




    def importHeader(self):

        localctx = ScriptParser.ImportHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(ScriptParser.IMPORT)
            self.state = 180
            self.simpleIdentifier()
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 181
                self.semi()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelObjectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclaration(self):
            return self.getTypedRuleContext(ScriptParser.FunctionDeclarationContext,0)


        def constantDeclaration(self):
            return self.getTypedRuleContext(ScriptParser.ConstantDeclarationContext,0)


        def structDeclaration(self):
            return self.getTypedRuleContext(ScriptParser.StructDeclarationContext,0)


        def scriptDeclaration(self):
            return self.getTypedRuleContext(ScriptParser.ScriptDeclarationContext,0)


        def propertyDeclaration(self):
            return self.getTypedRuleContext(ScriptParser.PropertyDeclarationContext,0)


        def archetypeDeclaration(self):
            return self.getTypedRuleContext(ScriptParser.ArchetypeDeclarationContext,0)


        def levelvarDeclaration(self):
            return self.getTypedRuleContext(ScriptParser.LevelvarDeclarationContext,0)


        def getRuleIndex(self):
            return ScriptParser.RULE_topLevelObject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelObject" ):
                listener.enterTopLevelObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelObject" ):
                listener.exitTopLevelObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelObject" ):
                return visitor.visitTopLevelObject(self)
            else:
                return visitor.visitChildren(self)




    def topLevelObject(self):

        localctx = ScriptParser.TopLevelObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_topLevelObject)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.functionDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.constantDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 186
                self.structDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 187
                self.scriptDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 188
                self.propertyDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 189
                self.archetypeDeclaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 190
                self.levelvarDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LevelvarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEVELVAR(self):
            return self.getToken(ScriptParser.LEVELVAR, 0)

        def simpleIdentifier(self):
            return self.getTypedRuleContext(ScriptParser.SimpleIdentifierContext,0)


        def getRuleIndex(self):
            return ScriptParser.RULE_levelvarDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLevelvarDeclaration" ):
                listener.enterLevelvarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLevelvarDeclaration" ):
                listener.exitLevelvarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLevelvarDeclaration" ):
                return visitor.visitLevelvarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def levelvarDeclaration(self):

        localctx = ScriptParser.LevelvarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_levelvarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(ScriptParser.LEVELVAR)
            self.state = 194
            self.simpleIdentifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArchetypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARCHETYPE(self):
            return self.getToken(ScriptParser.ARCHETYPE, 0)

        def archetypeName(self):
            return self.getTypedRuleContext(ScriptParser.ArchetypeNameContext,0)


        def COLONCOLON(self):
            return self.getToken(ScriptParser.COLONCOLON, 0)

        def simpleIdentifier(self):
            return self.getTypedRuleContext(ScriptParser.SimpleIdentifierContext,0)


        def archetypeDefaults(self):
            return self.getTypedRuleContext(ScriptParser.ArchetypeDefaultsContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ScriptParser.NL)
            else:
                return self.getToken(ScriptParser.NL, i)

        def HASH(self):
            return self.getToken(ScriptParser.HASH, 0)

        def getRuleIndex(self):
            return ScriptParser.RULE_archetypeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArchetypeDeclaration" ):
                listener.enterArchetypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArchetypeDeclaration" ):
                listener.exitArchetypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArchetypeDeclaration" ):
                return visitor.visitArchetypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def archetypeDeclaration(self):

        localctx = ScriptParser.ArchetypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_archetypeDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(ScriptParser.ARCHETYPE)
            self.state = 200
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ScriptParser.NL:
                self.state = 197
                self.match(ScriptParser.NL)
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 203
            self.archetypeName()
            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ScriptParser.NL:
                self.state = 204
                self.match(ScriptParser.NL)
                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 210
            self.match(ScriptParser.COLONCOLON)
            self.state = 214
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ScriptParser.NL:
                self.state = 211
                self.match(ScriptParser.NL)
                self.state = 216
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 218
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ScriptParser.HASH:
                self.state = 217
                self.match(ScriptParser.HASH)


            self.state = 220
            self.simpleIdentifier()
            self.state = 221
            self.archetypeDefaults()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArchetypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleIdentifier(self):
            return self.getTypedRuleContext(ScriptParser.SimpleIdentifierContext,0)


        def getRuleIndex(self):
            return ScriptParser.RULE_archetypeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArchetypeName" ):
                listener.enterArchetypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArchetypeName" ):
                listener.exitArchetypeName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArchetypeName" ):
                return visitor.visitArchetypeName(self)
            else:
                return visitor.visitChildren(self)




    def archetypeName(self):

        localctx = ScriptParser.ArchetypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_archetypeName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self.simpleIdentifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArchetypeDefaultsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(ScriptParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ScriptParser.RPAREN, 0)

        def archetypeDefault(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScriptParser.ArchetypeDefaultContext)
            else:
                return self.getTypedRuleContext(ScriptParser.ArchetypeDefaultContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ScriptParser.COMMA)
            else:
                return self.getToken(ScriptParser.COMMA, i)

        def getRuleIndex(self):
            return ScriptParser.RULE_archetypeDefaults

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArchetypeDefaults" ):
                listener.enterArchetypeDefaults(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArchetypeDefaults" ):
                listener.exitArchetypeDefaults(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArchetypeDefaults" ):
                return visitor.visitArchetypeDefaults(self)
            else:
                return visitor.visitChildren(self)




    def archetypeDefaults(self):
